--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
 
+### VSCode ###
+.vscode
+
 ### Django ###
 *.log
 *.pot
@@ -88,6 +91,7 @@ target/
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
 #Pipfile.lock
+
 
 # celery beat schedule file
 celerybeat-schedule
