--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pillow = "*"
 markdown = "*"
 django-markdownify = "*"
 bleach-whitelist = "*"
+django-registration = "*"
 
 [requires]
 python_version = "3.7"
